# cryptoMoneyInCpp

./: CMakeLists.txt  Progress.txt  README.md  requirements.txt
src/: base_algorithms.h  datastructures.h  elliptic_curves.h  main.cpp  prog
tests/: CMakeLists.txt  prog  test_ec.cpp
